--- a/_posts/DB/ORACLE/기초/2023-02-03-Oracle 인덱스.md
+++ b/_posts/DB/ORACLE/기초/2023-02-03-Oracle 인덱스.md
@@ -67,17 +67,25 @@ SELECT COLUMN_NAME FROM TABLE_NAME WHERE COLUMN_NAME = '100';
 ```
 
 ### 조건절에 NULL 또는 NOT NULL 을 사용한 경우
-+ 기본적으로 인덱스를 구성한 컬럼 값이 전부 NULL 이라면 인덱스는 NULL 값을 저장하지 않음.
-  + 따라서 NULL 인 값이 많지 않아 인덱스를 통해 엑세스를 하고자 한다면 데이터 생성 시 디폴트로 0과 같이 데이터를 만들어주는 것이 좋다.
-  + NOT NULL 이 분석 대상이라면 해당 칼럼을 NULL 허용 칼럼으로 두는 것이 좋다.
-
++ INDEX 가 존재하는 컬럼을 WHERE 조건에 IS NULL 로 조회하는 방법
+  + 해당 컬럼에 Default Value 를 지정해서 
+  COLUMN_NAME IS NULL 조회보다 COLUMN_NAME = DEFAULT VALUE 형태로 조회한다.
++ INDEX 가 존재하는 컬럼을 WHERE 조건에 IS NOT NULL 로 조회 하는 방법
 
 ```oracle
-SELECT COLUMN_NAME FROM TABLE_NAME WHERE COLUMN_NAME IS NULL;
-SELECT COLUMN_NAME FROM TABLE_NAME WHERE COLUMN_NAME > '';
-
-SELECT COLUMN_NAME FROM TABLE_NAME WHERE COLUMN_NAME IS NOT NULL;
-SELECT COLUMN_NAME FROM TABLE_NAME WHERE COLUMN_NAME >= 0; 
+-- CHAR/VARCHAR2 타입의 컬럼인 경우
+SELECT COLUMN_NAME FROM TABLE_NAME
+WHERE COLUMN_NAME > CHR(0)
+-- DATE 타입의 컬럼인 경우
+SELECT COLUMN_NAME FROM TABLE_NAME
+WHERE COLUMN_NAME > TO_DATE('19000101', 'YYYYMMDD')
+-- 19000101 은 DATE 컬럼에 존재할 수 없는 이전 값
+-- NUMBER 타입의 컬럼인 경우
+SELECT COLUMN_NAME FROM TABLE_NAME
+WHERE COLUMN_NAME >= 0
+UNION ALL
+SELECT COLUMN_NAME FROM TABLE_NAME
+WHERE COLUMN_NAME < 0
 ```
 
 ### 부정형으로 조건을 사용한 경우
