--- a/_posts/DB/ORACLE/기초/2023-02-02-TO_CHAR 함수.md
+++ b/_posts/DB/ORACLE/기초/2023-02-02-TO_CHAR 함수.md
@@ -91,6 +91,7 @@ FROM DUAL
 ```oracle
 SELECT TO_CHAR(SYSDATE, 'MM/DD') -- 07/03
 , TO_CHAR(SYSDATE, 'FMMM/DD') -- 7/3
+, TO_CHAR(TO_CHAR(SYSDATE, 'MM'), 99) -- 7
 FROM DUAL
 ```
 
