--- a/_posts/DB/ORACLE/기초/2023-02-03-Oracle 인덱스.md
+++ b/_posts/DB/ORACLE/기초/2023-02-03-Oracle 인덱스.md
@@ -79,7 +79,7 @@ WHERE COLUMN_NAME > CHR(0)
 -- DATE 타입의 컬럼인 경우
 SELECT COLUMN_NAME FROM TABLE_NAME
 WHERE COLUMN_NAME > TO_DATE('19000101', 'YYYYMMDD')
--- 19000101 은 DATE 컬럼에 존재할 수 없는 이전 값
+-- 19000101 은 DATE 컬럼에 존재할 수 없는 값
 -- NUMBER 타입의 컬럼인 경우
 SELECT COLUMN_NAME FROM TABLE_NAME
 WHERE COLUMN_NAME >= 0
