--- a/_posts/DB/ORACLE/기초/2023-02-02-Oracle 문법.md
+++ b/_posts/DB/ORACLE/기초/2023-02-02-Oracle 문법.md
@@ -3,11 +3,11 @@ title: "Oracle 문법"
 categories: oracleBase
 ---
 
-[1. CASE WHEN](#CASE-WHEN)  
-[2. GROUP BY](#GROUP-BY)  
-[3. WHERE IN](#WHERE-IN)    
-[4. FETCH 절](#FETCH-절)   
-[5. EXTRACT 절](#EXTRACT-절)   
+[1. CASE WHEN](#case-when)  
+[2. GROUP BY](#group-by)  
+[3. WHERE IN](#where-in)    
+[4. FETCH 절](#fetch-절)   
+[5. EXTRACT 절](#extract-절)   
 
 ## CASE WHEN
 + 오라클에서 if 문과 비슷한 기능을 하는 DECODE 함수가 있다.
@@ -150,6 +150,7 @@ WHERE job = 'MANAGER'
 + 그룹별 정보를 조회하는 용도로 쓴다.
 + 반드시 [집계 함수](#집계-함수) or [그룹 함수](#그룹-함수)와 함깨 사용해야 한다.
 + GROUP BY 의 기준이 된 컬럼 이외에는 다른 일반 칼럼을 조회하기 어렵다.
++ GROUP BY 절에서 여러 컬럼이 올 수 있으며 GROUP BY 절에 나온 컬럼들의 모든 경우의 수로 그룹을 만든다.
 + 기본식
   ```oracle
   SELECT 집계함수A(컬럼이름1), 집계함수B(컬럼이름2), ...
