--- a/_posts/DB/ORACLE/기초/2023-02-02-TO_CHAR 함수.md
+++ b/_posts/DB/ORACLE/기초/2023-02-02-TO_CHAR 함수.md
@@ -3,7 +3,7 @@ title: "TO_CHAR 함수"
 categories: oracleBase
 ---
 
-[1. TO_CHAR 함수](#TOCHAR-함수)  
+[1. TO_CHAR 함수](#tochar-함수)  
 [2. 날짜 포맷 변경](#날짜-포맷-변경) 
 [3. 소수점 변경](#소수점-변경)  
 [4. 숫자의 천 단위 콤마 찍기](#숫자의-천-단위-콤마-찍기)  
