--- a/_posts/DB/ORACLE/기초/2023-02-03-Oracle 인덱스.md
+++ b/_posts/DB/ORACLE/기초/2023-02-03-Oracle 인덱스.md
@@ -4,7 +4,7 @@ categories: oracleBase
 ---
 
 [1. 오라클 select 실행 순서](#오라클-select-실행-순서)    
-[2. 인덱스 SQL 문법](#인덱스-SQL-문법)  
+[2. 인덱스 SQL 문법](#인덱스-sql-문법)  
 [3. 인덱스 타지 않는 경우](#인덱스-타지-않는-경우)   
 
 
